# dso

./: .buildinfo  .codecov.yaml  .coverage  .cruft.json  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.rej  CHANGELOG.html  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  README.md.rej  api.html  biome.jsonc  cli_command_reference.html  cli_configuration.html  cli_installation.html  cli_shell_completion.html  command_reference.html  contributing.html  dso_python.html  dso_r.html  faq.html  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  pyproject.toml  pyproject.toml.rej  python_api.html  python_usage.html  references.html  search.html  searchindex.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  bug_report.yml.rej  feature_request.yml
.github/workflows/: deploy_pypi.yml  docs.yaml  docs.yml  fix_linting.yml  lint_code.yml  pre_commit.yaml  pre_commit.yml  release.yaml  release.yml  screenshots.yml  test.yaml  unit_tests.yml
_sources/: cli_command_reference.md  getting_started.md  index.md
_sources/user_guide/: config_files.md  linting.md  params_files.md  pre_commit.md  templates.md
_static/: documentation_options.js
docs/: .gitignore  api.md  cli_command_reference.md  cli_configuration.md  cli_installation.md  cli_shell_completion.md  command_reference.md  conf.py  contributing.md  contributing.md.rej  dso_r.md  getting_started.md  index.md  python_usage.md  user_guide.md
docs/notebooks/: example.ipynb
docs/tutorials/: getting_started.md  transform_project.md  work_on_existing_project.md
docs/user_guide/: cli_configuration.md  params_files.md  pre_commit.md  quarto.md  templates.md  transform_project.md  uv.md  work_on_existing_project.md
img/: dso_tools.pptx  figures.pptx
pr-preview/pr-101/: CHANGELOG.html  cli_command_reference.html  cli_configuration.html  cli_installation.html  contributing.html  faq.html  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  python_api.html  python_usage.html  search.html  searchindex.js
pr-preview/pr-103/: CHANGELOG.html  cli_command_reference.html  cli_configuration.html  cli_installation.html  contributing.html  faq.html  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  python_api.html  python_usage.html  search.html  searchindex.js
pr-preview/pr-104/: CHANGELOG.html  cli_command_reference.html  cli_configuration.html  cli_installation.html  contributing.html  faq.html  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  python_api.html  python_usage.html  search.html  searchindex.js
pr-preview/pr-106/: CHANGELOG.html  cli_command_reference.html  cli_configuration.html  cli_installation.html  contributing.html  faq.html  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  python_api.html  python_usage.html  search.html  searchindex.js
pr-preview/pr-107/: CHANGELOG.html  cli_command_reference.html  cli_installation.html  contributing.html  faq.html  genindex.html  index.html  objects.inv  py-modindex.html  python_api.html  python_usage.html  search.html  searchindex.js
pr-preview/pr-114/: CHANGELOG.html  cli_command_reference.html  cli_installation.html  contributing.html  faq.html  genindex.html  index.html  objects.inv  py-modindex.html  python_api.html  python_usage.html  search.html  searchindex.js
pr-preview/pr-115/: CHANGELOG.html  cli_command_reference.html  cli_installation.html  contributing.html  faq.html  genindex.html  index.html  objects.inv  py-modindex.html  python_api.html  python_usage.html  search.html  searchindex.js
pr-preview/pr-116/: CHANGELOG.html  cli_command_reference.html  cli_installation.html  cli_shell_completion.html  contributing.html  faq.html  genindex.html  index.html  objects.inv  py-modindex.html  python_api.html  python_usage.html  search.html  searchindex.js
pr-preview/pr-117/: CHANGELOG.html  cli_command_reference.html  cli_installation.html  cli_shell_completion.html  contributing.html  faq.html  genindex.html  index.html  objects.inv  py-modindex.html  python_api.html  python_usage.html  search.html  searchindex.js
pr-preview/pr-119/: CHANGELOG.html  cli_command_reference.html  cli_installation.html  cli_shell_completion.html  contributing.html  faq.html  genindex.html  index.html  objects.inv  py-modindex.html  python_api.html  python_usage.html  search.html  searchindex.js
pr-preview/pr-120/: CHANGELOG.html  cli_command_reference.html  cli_installation.html  cli_shell_completion.html  contributing.html  faq.html  genindex.html  index.html  objects.inv  py-modindex.html  python_api.html  python_usage.html  search.html  searchindex.js
pr-preview/pr-134/: CHANGELOG.html  cli_command_reference.html  cli_installation.html  cli_shell_completion.html  contributing.html  faq.html  genindex.html  index.html  objects.inv  py-modindex.html  python_api.html  python_usage.html  search.html  searchindex.js
pr-preview/pr-136/: CHANGELOG.html  cli_command_reference.html  cli_installation.html  cli_shell_completion.html  contributing.html  faq.html  genindex.html  index.html  objects.inv  py-modindex.html  python_api.html  python_usage.html  search.html  searchindex.js
pr-preview/pr-137/: CHANGELOG.html  cli_command_reference.html  cli_installation.html  cli_shell_completion.html  contributing.html  faq.html  (+8 more)
src/dso/templates/init/default/: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .ruff.toml  Manifest.toml  Project.toml  README.md  params.in.yaml  pyproject.toml
tests/: conftest.py  test_api.py  test_cli.py  test_compile_config.py  test_create.py  test_exec.py  test_get_config.py  test_init.py  test_lint.py  test_mv.py  test_pandocfilter.py  test_util.py  test_watermark.py
tutorials/: getting_started.html  transform_project.html  work_on_existing_project.html
user_guide/: accessing_stage_configs.html  cli_configuration.html  config_files.html  dvc.html  linting.html  params_files.html  pre_commit.html  quarto.html  templates.html  uv.html
(+1201 files in other folders)
